--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Hero Section -->
   <section id="home" class="hero">
     <div class="hero-content">
-      <h1>Hello, I'm <span>Ashvin Kumar S</span></h1>
+      <h1>Hello, I'm <span>S.VISHWA</span></h1>
       <p>A passionate student learning web development 🚀</p>
       <a href="#projects" class="btn">View My Work</a>
     </div>
@@ -83,3 +83,4 @@
 </body>
 
 </html>
+
